# plotty

./: CMakeLists.txt
cmake/: plottyConfig.cmake.in
src/: matplotlibcpp.cpp
